Some_Text_Added

--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     <title>DOCUMENT</title>
 
     <style>
-        .text-design {
-            background-color: blue;
+        .Header-Design {
             text-align: center;
             width: auto;
-            color: gold;
+            color: blue
         }
 
-        .ameer-ali {
+        .Txt-designing {
             background-color: brown;
             width: max-content;
         }
@@ -24,14 +23,35 @@
 </head>
 
 <body>
-    <p>
     <div>
-        <h1 class="text-design"> World top 10 beautiful countries </h1>
+        <u>
+            <p>
+            <h1 class="Header-Design">Medical News Today</h1>
+        </u>
+        <p style="width: 50%;">
+            An article is any member of a class of dedicated words that are used with noun phrases to mark the
+            identifiability of the referents of the noun phrases. The category of articles constitutes a part of speech.
+            In English, both "the" and "a/an" are articles, which combine with nouns to form noun phrases.
+        
+        </p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </p>
     </div>
-    </p>
-
-
-    <p class="ameer-ali"> </p>
 </body>
 
 </html>
