--- a/index.html
+++ b/index.html
@@ -1,22 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-<style>
-    #head{
-        background-color: blue; 
-        color: black;
-        text-align: center;
-    }
-     
-</style>
 
-</head>
-<body>
-    <h1 id="head" > World Top 10 beautiful Countries</h1>
-    <h2 id="head"> Pakistan is world No1 beautiful Country</h2>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Beautiful Countries</title>
+        <style>
+            #main-heading {
+                background-color: blue;
+                color: white;
+                text-align: center;
+                padding: 10px;
+            }
+
+            .sub-heading {
+                background-color: lightblue;
+                color: black;
+                text-align: center;
+                padding: 8px;
+            }
+        </style>
+    </head>
+
+    <body>
+        <h1 id="main-heading">Explore the Beauty of Our World</h1>
+        <h2 class="sub-heading">Pakistan: A Gem Among Beautiful Countries</h2>
+
+        <p>Welcome to our website showcasing the top 10 most beautiful countries in the world. Each country is unique
+            with its breathtaking landscapes, rich cultures, and amazing people.</p>
+
+        <h3>Why Pakistan is No. 1?</h3>
+        <p>Pakistan, with its diverse geography from mountains to beaches, has captured the hearts of travelers
+            worldwide.
+            The hospitality of its people and the richness of its history make it a must-visit destination.</p>
+
+        <h3>Other Beautiful Countries</h3>
+        <ul>
+            <li>Switzerland: The land of picturesque landscapes and charming villages.</li>
+            <li>Japan: Blending tradition and modernity seamlessly.</li>
+            <li>New Zealand: A haven for nature lovers with stunning fjords and mountains.</li>
+            <li>Brazil: Famous for its vibrant festivals and Amazon rainforest.</li>
+        </ul>
+
+        <p>Start your journey of exploration and discover the beauty each of these countries has to offer.</p>
+    </body>
+
 </html>
